Video threw out the page display on mobile, tiny tweet to fix video display.

--- a/assets/stylesheets/master.css
+++ b/assets/stylesheets/master.css
@@ -249,13 +249,6 @@ body{
 
 }
 
-iframe{
-  height: 17.82rem;   /* .575 */
-  width: 31rem;
-  /*width: "500";
-  height: "281";*/
-}
-
 body > header > h1 {
   font-size: 350%;
   text-align: center;
@@ -307,6 +300,11 @@ a:visited {
 ol{
   margin-top: 0;
   padding-top: 0;
+}
+
+iframe{
+  height: 14.375rem;   /* .575 */
+  width: 25rem;
 }
 
 #definition-of-fod{
@@ -442,6 +440,10 @@ footer{
   }
   #donut{
     height: 4rem;
+  }
+  iframe{
+    height: 17.82rem;   /* .575 */
+    width: 31rem;
   }
 }
 
